nambah gronsfeld cipher

--- a/templates/index.html
+++ b/templates/index.html
@@ -31,6 +31,7 @@
                             <option value="playfair" {% if cipher_type=='playfair' %}selected{% endif %}>Playfair Cipher
                             </option>
                             <option value="hill" {% if cipher_type=='hill' %}selected{% endif %}>Hill Cipher</option>
+                            <option value="gronsfeld" {% if cipher_type == "gronsfeld" %}selected{% endif %}>Gronsfeld Cipher</option>
                         </select>
                     </div>
 
